modificação para imagens

--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
 <body>
     <header>
         <div class="menu-left">
-            <img class="icone-menu" src="/assets/images/menu.png" alt="Ícone de três riscos para acessar o menu.">
-            <img class="logo-youtube" src="/assets/images/youtube 1.png" alt="Logo do Youtube."> 
+            <img class="icone-menu" src="./assets/images/menu.png" alt="Ícone de três riscos para acessar o menu.">
+            <img class="logo-youtube" src="./assets/images/youtube 1.png" alt="Logo do Youtube."> 
         </div>
         <div class="menu-center">
-            <img src="/assets/images/Center.png" alt="Barra de pesquisa.">
+            <img src="./assets/images/Center.png" alt="Barra de pesquisa.">
         </div>
         <div class="menu-right">
-            <img src="/assets/images/video.png" alt="Ícone de câmera para publicar  vídeos.">
-            <img src="/assets/images/bell.png" alt="Ícone de um sino para acessar notificações.">
-            <img src="/assets/images/Avatar.png" alt="Foto de perfil do usuário.">  
+            <img src="./assets/images/video.png" alt="Ícone de câmera para publicar  vídeos.">
+            <img src="./assets/images/bell.png" alt="Ícone de um sino para acessar notificações.">
+            <img src="./assets/images/Avatar.png" alt="Foto de perfil do usuário.">  
         </div>
     </header>
     <div class="container">
         <div class="watching-video">
             <div class="main-video">
-                <img src="/assets/images/thumbnail.jpg" alt="Princesa rapunzel, garota loira de cabelos compridos, apoiada na janela, cercada por vasos de flores e um camaleão verde em seu ombro.">
+                <img src="./assets/images/thumbnail.jpg" alt="Princesa rapunzel, garota loira de cabelos compridos, apoiada na janela, cercada por vasos de flores e um camaleão verde em seu ombro.">
                 <h1>Sylvia Salustti - Quando a Minha Vida Vai Começar? (De "Enrolados"/Vídeo Oficial)
                 </h1>
                 <div class="actions">
-                    <img class="logo-disney" src="/assets/images/logo-disney-youtube.png" alt="Logo da Disney no perfil do canal.">
+                    <img class="logo-disney" src="./assets/images/logo-disney-youtube.png" alt="Logo da Disney no perfil do canal.">
                     <p>
                       <strong>DisneyMusicBRVEVO</strong><br>
                         4 mi de inscritos
                     </p>
-                    <img class="subscribe" src="/assets/images/Subscribe Button.png" alt="Botão para inscrever-se no canal.">
-                    <img class="like" src="/assets/images/Like.png" alt="Botão para dar like no vídeo.">
-                    <img class="deslike" src="/assets/images/Deslike.png" alt="Botão para dar deslike no vídeo.">
-                    <img class="share" src="/assets/images/Share.png" alt="Botão para compartilhar o vídeo.">
-                    <img class="download" src="/assets/images/Download.png" alt="Botão para realizar o download do vídeo.">
+                    <img class="subscribe" src="./assets/images/Subscribe Button.png" alt="Botão para inscrever-se no canal.">
+                    <img class="like" src="./assets/images/Like.png" alt="Botão para dar like no vídeo.">
+                    <img class="deslike" src="./assets/images/Deslike.png" alt="Botão para dar deslike no vídeo.">
+                    <img class="share" src="./assets/images/Share.png" alt="Botão para compartilhar o vídeo.">
+                    <img class="download" src="./assets/images/Download.png" alt="Botão para realizar o download do vídeo.">
                 </div>
 
                 <div class="description">
@@ -63,7 +63,7 @@
             </div>
             <div class="sidebar">
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-moana.jpg" alt="Thumbnail Moana - Saber Quem Sou - Princesa Moana remando em um barco de madeira.">
+                    <img src="./assets/images/thumbnail-moana.jpg" alt="Thumbnail Moana - Saber Quem Sou - Princesa Moana remando em um barco de madeira.">
                     <div class="video-info">
                         <h2>
                             Any Gabrielly - Saber Quem Sou (De "Moana")
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-enrolados.jpg" alt="Thumbnail Enrolados - Casal em uma barco cercado por luzes no ar, o rapaz toca o rosto da moça, que tem o cabelo longo decorado por flores.">
+                    <img src="./assets/images/thumbnail-enrolados.jpg" alt="Thumbnail Enrolados - Casal em uma barco cercado por luzes no ar, o rapaz toca o rosto da moça, que tem o cabelo longo decorado por flores.">
                     <div class="video-info">
                         <h2>
                             Sylvia S- Vejo Enfim a Luz Brilhar (De "Enrolados")
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-frozen2.jpg" alt="Thumbnail Frozen 2 - Princesa Elsa cantando dentro de uma geleira.">
+                    <img src="./assets/images/thumbnail-frozen2.jpg" alt="Thumbnail Frozen 2 - Princesa Elsa cantando dentro de uma geleira.">
                     <div class="video-info">
                         <h2>
                             Taryn, Myra Ruiz - Vem Mostrar (De "Frozen 2")
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-PrincesaEoSapo.jpg" alt="Thumbnail A Princesa e o Sapo - Princesa Tiana cantando de braços abertos dentro de um restaurante. ">
+                    <img src="./assets/images/thumbnail-PrincesaEoSapo.jpg" alt="Thumbnail A Princesa e o Sapo - Princesa Tiana cantando de braços abertos dentro de um restaurante. ">
                     <div class="video-info">
                         <h2>
                             Kacau Gomes - Quase Lá (De "A Princesa e o Sapo")
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-tarzan.jpg" alt="Thumbnail Tarzan - Uma macaca deitada abraçada com um bebê humano.">
+                    <img src="./assets/images/thumbnail-tarzan.jpg" alt="Thumbnail Tarzan - Uma macaca deitada abraçada com um bebê humano.">
                     <div class="video-info">
                         <h2>
                             Ed Motta - No Meu Coração (De "Tarzan")
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-Bela-Fera.jpg" alt="Thumbnail A Bela e a Fera - A Bela e a Fera dançam juntos dentro do salão principal.">
+                    <img src="./assets/images/thumbnail-Bela-Fera.jpg" alt="Thumbnail A Bela e a Fera - A Bela e a Fera dançam juntos dentro do salão principal.">
                     <div class="video-info">
                         <h2>
                             Sentimentos são (De "A Bela e a Fera")
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-reiLeao.jpg" alt="Thumbnail O Rei Leão - Um leão adulto e um filhote em cima de uma pdera em frente ao pôr do Sol.">
+                    <img src="./assets/images/thumbnail-reiLeao.jpg" alt="Thumbnail O Rei Leão - Um leão adulto e um filhote em cima de uma pdera em frente ao pôr do Sol.">
                     <div class="video-info">
                         <h2>
                             Nesta Noite o Amor Chegou (De "O Rei Leão")
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-ariel.jpg" alt="Thumbnail A Pequena Sereia - Princesa Ariel cantando olhando para cima.">
+                    <img src="./assets/images/thumbnail-ariel.jpg" alt="Thumbnail A Pequena Sereia - Princesa Ariel cantando olhando para cima.">
                     <div class="video-info">
                         <h2>
                             Parte do Seu Mundo (De "A Pequena Sereia")
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="video-suggested">
-                    <img src="/assets/images/thumbnail-viva.jpg" alt="Thumbnail Viva - Um pai com um violão tocando e cantando para sua filhinha sentada na cama.">
+                    <img src="./assets/images/thumbnail-viva.jpg" alt="Thumbnail Viva - Um pai com um violão tocando e cantando para sua filhinha sentada na cama.">
                     <div class="video-info">
                         <h2>
                            Lembre de Mim (De "Viva")
